--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,90 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# ============================================================================
+# PROJECT SPECIFIC (Causal Eval Bench)
+# ============================================================================
+
+# Application data
+data/
+logs/
+uploads/
+downloads/
+temp/
+tmp/
+cache/
+evaluation_results/
+test_results/
+benchmark_data/
+
+# Database files
+causal_eval_bench.db
+test_causal_eval_bench.db
+*.sqlite
+*.sqlite3
+
+# Redis dump
+dump.rdb
+
+# Docker
+.dockerignore
+docker-compose.override.yml
+
+# Local configuration
+config/local.py
+config/local.yaml
+config/local.json
+settings/local.py
+.env.local
+.env.development
+.env.production
+
+# Secrets and keys
+*.pem
+*.key
+*.crt
+*.p12
+.secrets/
+secrets.json
+
+# Machine learning artifacts
+models/
+checkpoints/
+tensorboard_logs/
+mlruns/
+.mlflow/
+
+# Pre-commit
+.pre-commit-config.yaml.backup
+.secrets.baseline
+
+# IDE specific (uncommented for project use)
+.vscode/
+.idea/
+
+# OS specific
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Backup files
+*.bak
+*.backup
+*.orig
+
+# Temporary files
+*.tmp
+*.temp
+
+# Node.js (if used for documentation or tooling)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
